appId: com.ahmadalawi.hashiya
---
- launchApp:
    clearState: true
    arguments:
      maestroTesting: true
- tapOn:
    id: welcomeLibrary
- tapOn:
    id: createNotebook
- tapOn:
    id: notebookTitle
- eraseText
- inputText: QA Notebook
- tapOn:
    id: saveNotebook
- assertVisible:
    id: openNotebook-QA Notebook
